Wed Apr 20 10:25:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (append_compile_error): use rb_syntax_error_append.

	* error.c (rb_syntax_error_append): append messages into a
	  SyntaxError exception instance.

	* parse.y (yycompile0): make new SyntaxError instance in main
	  mode, otherwize error_buffer should be a SyntaxError if error
	  has occurred.

Tue Apr 19 17:42:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (err_vcatf): rename, and separate appending message from
	  creating a string buffer.

	* error.c (rb_syntax_error_append): merge rb_error_vsprintf and
	  rb_compile_err_append.

	* parse.y (parser_compile_error): use rb_syntax_error_append.

Tue Apr 19 13:46:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (append_compile_error, compile_bug): pass iseq and get
	  error info and file from it, not by the thread error info.

	* error.c (rb_report_bug_valist): take va_list instead of variadic
	  arguments, and just report the bug but not abort.

Tue Apr 19 13:18:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/time.rb: revert r54167 because it would break
	  backward compatibilities, and it is documented that
	  Time.parse does not take into account time zone
	  abbreations other than ones described in RFC 822

Tue Apr 19 13:12:03 2016  Naotoshi Seo  <sonots@gmail.com>

	* ChangeLog: Fix dates of previous commits

Tue Apr 19 12:45:03 2016  Naotoshi Seo  <sonots@gmail.com>

	* ChangeLog: Add decriptions for logger updates
	* NEWS: Add descriptions for logger updates

Tue Apr 19 12:45:02 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: Add shift_period_suffix option

Tue Apr 19 12:45:01 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: Allow specifying logger parameters in constructor
	  such as level, progname, datetime_format, formatter.

Mon Apr 18 16:07:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): should not replace the