@@ -1,3 +1,11 @@
+Wed Apr 20 15:52:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* error.c (syntax_error_initialize): move the default message,
+	  "compile error", from parse.y.  the default parameter should
+	  belong to the class definition.
+
+	* parse.y (yycompile0): use the default parameter.
+
 Wed Apr 20 10:25:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (append_compile_error): use rb_syntax_error_append.
